[gd_scene load_steps=2 format=3 uid="uid://d4e1qmsp00np1"]

[ext_resource type="Script" path="res://Search_Page/search.gd" id="1_jbr0j"]

[node name="Search" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_jbr0j")
metadata/_edit_lock_ = true

[node name="BG" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.197937, 0.197937, 0.197937, 1)
metadata/_edit_lock_ = true

[node name="UInput" type="TextEdit" parent="."]
visible = false
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_top = 26.0
offset_bottom = 95.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 35
placeholder_text = "Enter Place Name"

[node name="UlineInput" type="LineEdit" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_left = -1.0
offset_top = 26.0
offset_right = -1.0
offset_bottom = 95.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 35
placeholder_text = "Enter a Place Name in Malaysia"
clear_button_enabled = true

[node name="HTTPRequest" type="HTTPRequest" parent="."]
use_threads = true
timeout = 15.0

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 167.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.0131042, 0.0898535, 0.134064, 1)

[node name="ScrollContainer" type="ScrollContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 171.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="ScrollContainer"]
custom_minimum_size = Vector2(628, 981)
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 2
theme_override_constants/separation = 15

[node name="Search" type="Button" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -128.0
offset_top = 98.0
offset_right = -4.0
offset_bottom = 166.0
grow_horizontal = 0
text = "Search"

[node name="Date" type="Label" parent="."]
layout_mode = 1
offset_right = 99.0
offset_bottom = 23.0
text = "Current date"

[connection signal="text_changed" from="UInput" to="." method="_on_text_edit_text_changed"]
[connection signal="text_set" from="UInput" to="." method="_on_u_input_text_set"]
[connection signal="text_submitted" from="UlineInput" to="." method="_on_line_edit_text_submitted"]
[connection signal="request_completed" from="HTTPRequest" to="." method="_on_http_request_request_completed"]
[connection signal="pressed" from="Search" to="." method="_on_search_pressed"]
